# Chess

./: .gitmodules  CMakeLists.txt  Chess.sln  LICENSE.txt  README.md  sdl2-image-config.cmake
Chess/: Bishop.cpp  Bishop.h  Chess.sln  Chess.vcxproj  Chess.vcxproj.filters  King.h  Knight.h  Pawn.cpp  Pawn.h  Piece.h  Queen.cpp  Queen.h  Rook.h  SDL_Handler.cpp  SDL_Handler.h  mainLoop.cpp
Chess/Chess/: Chess.vcxproj  Game.cpp  Game.h  King.cpp  Knight.cpp  Piece.cpp  Piece.h  Queen.h  Rook.cpp  SDL_Handler.cpp  SDL_Handler.h  mainLoop.cpp
cmake/sdl2/: FindSDL2_image.cmake  FindSDL2main.cmake
src/: Bishop.cpp  Bishop.h  CMakeLists.txt  Chess.vcxproj  Chess.vcxproj.filters  Game.cpp  King.cpp  King.h  Knight.cpp  Knight.h  Main.cpp  MainLoop.cpp  MainLoop.h  Pawn.cpp  Pawn.h  Piece.h  Queen.cpp  Rook.cpp  Rook.h
